--- a/label/templates/label/navbar.html
+++ b/label/templates/label/navbar.html
@@ -1,7 +1,7 @@
 
 <ul class="navbar">
-    <li class="navlist"><a class="navtext {{ active.0 }}" href="/">Accueil</a></li>
-    <li class="navlist"><a class="navtext {{ active.1 }}" href="/label">José Records</a></li>
-    <li class="navlist"><a class="navtext {{ active.2 }}" href="/ld2j">LD2J</a></li>
-    <li class="navlist"><a class="navtext {{ active.3 }}" href="/btm">B.T.M</a></li>
+    <li class="navlist"><a class="navtext {{ active.0 }}" href="/"><h6 style="font-size:3em">Accueil</h6></a></li>
+    <li class="navlist"><a class="navtext {{ active.1 }}" href="/label"><h6 style="font-size:3em">José Records</h6></a></li>
+    <li class="navlist"><a class="navtext {{ active.2 }}" href="/ld2j"><h6 style="font-size:3em">LD2J</h6></a></li>
+    <li class="navlist"><a class="navtext {{ active.3 }}" href="/btm"><h6 style="font-size:3em">B.T.M</h6></a></li>
 </ul>
