--- a/label/static/css/navbar.css
+++ b/label/static/css/navbar.css
@@ -30,4 +30,6 @@
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1em;
 }
