--- a/label/static/css/navbar.css
+++ b/label/static/css/navbar.css
@@ -1,35 +1,25 @@
 /* li */
-.navlist {
-    float: left;
+.topnav {
+    overflow: hidden;
+    background-color: #333;
 }
-
-
-/* li & a */
-
-.navtext {
-    display: block;
-    color: white;
+  
+.topnav a {
+    float: left;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 3em;
+    font-family: 'Rajdhani', sans-serif;
 }
-
-.navlist:hover {
-    background-color: #111;
+  
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
 }
-
-
-/* ul */
-.navbar {
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
-
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1em;
+  
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
 }
