--- a/label/templates/label/base.html
+++ b/label/templates/label/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1080, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
         var my_element = document.getElementById("big-panel");
 
         my_element.scrollIntoView({
-            behavior: "smooth",
+            behavior: "instant",
             block: "start",
             inline: "nearest"
         });
