--- a/label/templates/label/label.html
+++ b/label/templates/label/label.html
@@ -6,7 +6,7 @@
 
 
     <h2>Un label très accessible</h2>
-    <h3>José Records a été créé en 2017 ! Le but était au départ d'offrir des services d'enregistrements à bas prix</h3>
+    <h3 class="artist-label-text">José Records a été créé en 2017 ! Le but était au départ d'offrir des services d'enregistrements à bas prix</h3>
 
 {% else %}
 
