--- a/label/static/css/navbar.css
+++ b/label/static/css/navbar.css
@@ -1,7 +1,6 @@
-/* li */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(0, 0, 0);
 }
   
 .topnav a {
@@ -17,9 +16,10 @@
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+    border-radius: 1em;
 }
   
 .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #ff0000;
     color: white;
 }
