--- a/label/templates/label/base.html
+++ b/label/templates/label/base.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300&family=MonteCarlo&family=Questrial&family=Rajdhani:wght@300&family=Roboto+Slab:wght@500&family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
 
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}" type="text/css">
 
     {% if page_name != "Bienvenue" %}
     <script type="text/javascript">
@@ -38,6 +38,9 @@
 
     {% include 'label/navbar.html' with active=nav_current %}
 
+
+    {% if page_name != "Bienvenue" %}
+
     <div class="mid-panel card">
         <h4 style="font-size: 2em;">Plus de détails sur {{ iterable_name }} </h4>
 
@@ -50,6 +53,7 @@
     <div id="big-panel" class="big-panel card">
         {% block content %} {% endblock content %}
     </div>
+    {% endif %}
 
 </body>
 </html>
