complete the btm template view

--- a/label/static/css/base.css
+++ b/label/static/css/base.css
@@ -100,3 +100,34 @@ h6 {
 .artist-label-text {
     margin: 5%;
 }
+
+.prod-card {
+    text-align: center;
+    color: black;
+    background-color: white;
+    text-decoration: none;
+    border-radius: 4em;
+    margin: 2em;
+    width: 20em;
+    height: 10em;
+    float: left;
+    transition: 0.5s;
+    border-radius: 4em 0.5em;
+}
+
+.prod-card h3
+{
+    font-size: 3em;
+    margin: 0.5em;
+}
+
+.prod-card h4
+{
+    font-size: 2em;
+    margin: 1em;
+}
+
+.prod-card:hover {
+    background-color: rgb(255, 187, 0);
+    border-radius: 4em;
+}
