--- a/label/static/css/base.css
+++ b/label/static/css/base.css
@@ -131,3 +131,48 @@ h6 {
     background-color: rgb(255, 187, 0);
     border-radius: 4em;
 }
+
+.research-bar {
+    z-index: 1;
+    font-family: 'Rajdhani', sans-serif;
+    text-align: center;
+    font-size: 4em;
+    margin: 1em;
+    border-radius: 4em 0.5em;
+    transition: 0.5s;
+    border: none;
+    border: 2px solid white;
+}
+
+.research-bar:hover {
+    border-radius: 4em;
+}
+
+.research-bar:focus {
+    border-radius: 4em;
+    outline: none;
+    box-shadow: 0px 0px 5em rgba(255, 255, 255, 0.37);
+    background-color: black;
+    color: white;
+    border-color: white;
+    border: 2px solid white;
+}
+
+.research-button {
+    border: none;
+    padding: 0em 0.5em;
+    font-size: 4em;
+    border-radius: 4em 0.5em;
+    background-color: red;
+    border: 4px solid red;
+    transition: 0.5s;
+}
+
+.research-button:hover {
+    border-radius: 4em;
+}
+
+.research-button:focus {
+    background-color: black;
+    color: red;
+}
