--- a/label/templates/label/btm.html
+++ b/label/templates/label/btm.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 
-{% if not type %}
+{% if not type_name %}
+
 
 <div>
     <div>
@@ -23,9 +24,33 @@
         {% endfor %}
 
     </div>
+    
+    <label for="prod-search">Rechercher une prod</label>
+    <input class="research-bar" type="search" id="prod-search" class="" name="btm-type-search" aria-label="Rechercher">
+    <button type="submit" placeholder="Rechercher une prod" class="research-button">Rechercher</button>
+
 </div>
 
 {% else %}
+
+
+    <div>
+        <h2>{{ type_name }}</h2>
+        <h3>Voilà {{ type_size }} beats du genre {{ type_name }}. Tu peux les écouter et les télécharger à ta guise !</h3>
+
+        {% for prod in prods %}
+        <div id=prod{{ prod.id }} class="instru-card">
+            <div class="button"></div>
+            <h3>{{ prod.name }}</h3>
+            <h4>{{ prod.reference }}</h4>
+            <audio id="prod{{ forloop.counter0 }}">
+                <source src="{{ prod.music.url }}" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        {% endfor %}
+
+    <div>
 
 {% endif %}
 
