complete the btm/search template view

--- a/label/templates/label/base.html
+++ b/label/templates/label/base.html
@@ -31,7 +31,7 @@
 
             var current_beat = -1
 
-            let btns = document.getElementsByClassName('button')
+            let btns = document.getElementsByClassName('button-play')
             let beat = []
             
             {% for prod in prods %}
