--- a/JR_Website_Project/static/css/navbar.css
+++ b/JR_Website_Project/static/css/navbar.css
@@ -1,6 +1,8 @@
     .topnav {
         overflow: hidden;
         background-color: rgb(0, 0, 0);
+        transition-duration: 0.5s;
+        border-radius: 3em 1em;
     }
     
     .topnav a {
@@ -11,10 +13,13 @@
         text-decoration: none;
         font-size: 3em;
         font-family: 'Rajdhani', sans-serif;
+        transition-duration: 0.5s;
+        border: 5px solid black;
+        border-radius: 1em;
     }
     
     .topnav a:hover {
-        background-color: #ddd;
+        background-color: rgb(255, 187, 0);
         color: black;
         border-radius: 1em;
     }
@@ -22,4 +27,5 @@
     .topnav a.active {
         background-color: #ff0000;
         color: white;
+        border-radius: 1em 0.3em;
     }
