--- a/JR_Website_Project/static/css/player.css
+++ b/JR_Website_Project/static/css/player.css
@@ -1,4 +1,4 @@
-.button-play {
+.button {
     box-sizing: border-box;
     width: 0;
     height: 74px;
@@ -12,35 +12,37 @@
     margin: 3em;
 }
 
-.button-play.paused {
+.button.paused {
     border-style: double;
     border-width: 0px 0 0px 60px;
     border-color: transparent transparent transparent #ff0000;
 }
     
-.button-play:hover {
+.button:hover {
     border-color: transparent transparent transparent #ff0000;
 }
 
-.instrucard {
+.instru-card {
     background-color: white;
     color: black;
     border-radius: 4em 2em;
     float: left;
     margin: 2em 4em;
     width: 20em;
-    border: solid white 4px;
-    transition: 0.5s;
+    border: solid white 2px;
 }
 
-.instrucard:hover {
-    background-color: black;
-    border: solid red 4px;
-    color: white;
+.instru-card:hover {
     border-radius: 4em;
 }
 
-.instrutext {
+.instru-card:focus {
+    
+    background-color: black;
+    color: white;
+}
+
+.instru-text {
     float: center;
     text-align: center;
 }
