--- a/label/static/css/base.css
+++ b/label/static/css/base.css
@@ -166,6 +166,7 @@ h6 {
     background-color: red;
     border: 4px solid red;
     transition: 0.5s;
+    font-family: 'Jura', sans-serif;
 }
 
 .research-button:hover {
