--- a/label/templates/label/ld2j.html
+++ b/label/templates/label/ld2j.html
@@ -3,7 +3,15 @@
 {% block content %}
 
 <div>
-    <h3>Coucou</h3>
+    <h2>LD2J, un rappeur ambitieux</h2>
+    <h3 class="narrative-text">
+        La carrière de ce jeune homme remonte à 2013. Il découvre alors ce qu'est le rap et commmence à écrire de son coté
+        Ce n'est qu'en 2014 qu'il tentera de mettre au bout du jour un premier projet. Objectivement ce n'était pas le meilleur
+        mais il faut tout de même bien reconnaître qu'il s'agissait d'un excellent début pour son jeune âge.
+        Après cette tentive, il commencera enfin à voir plus loin et cherchera à bénéficier de vraies séances d'enregistrements
+        en studio et sera repéré par le groupe Ô-Totem de la MJC Rillieux-la-Pape. Cet instant a marqué un tournant dans sa carrière
+        car désormais il a pu s'enregistrer plusieurs fois sur scène et a même eu l'occasion de se produire en concert à 2 reprises.
+    </h3>
 </div>
 
 {% endblock %}
