finish ld2j view template

--- a/label/templates/label/base.html
+++ b/label/templates/label/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/player.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/album.css' %}" type="text/css">
 
     {% if page_name != "Bienvenue" %}
     <script type="text/javascript">
