--- a/label/static/css/base.css
+++ b/label/static/css/base.css
@@ -37,9 +37,10 @@ h6 {
     border-radius: 1em;
     box-shadow: 0px 0px 10px #000000;
     margin: 1.5%;
-    background: rgb(0, 0, 0);
+    background: linear-gradient(to bottom, #000000da 50%, #530000a1 100%);
     color: rgb(211, 211, 211);
 }
+
 
 .card:target {
     box-shadow: 0px 0px 5px #000000;
