--- a/label/static/css/navbar.css
+++ b/label/static/css/navbar.css
@@ -3,6 +3,10 @@
         background-color: rgb(0, 0, 0);
         transition-duration: 0.5s;
         border-radius: 3em 1em;
+        
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
+        top: 0;
     }
     
     .topnav a {
@@ -11,11 +15,12 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 3em;
+        font-size: 1em;
         font-family: 'Rajdhani', sans-serif;
         transition-duration: 0.5s;
         border: 5px solid black;
-        border-radius: 1em;
+        border-radius: 1em 0.3em;
+        
     }
     
     .topnav a:hover {
