--- a/label/static/css/base.css
+++ b/label/static/css/base.css
@@ -6,19 +6,19 @@ html {
 
 h1 {
     font-family: 'MonteCarlo', cursive;
-    font-size: 12em;
+    font-size: 20em;
     text-align: center;
 }
 
 h2 {
     font-family: 'Roboto Slab', serif;
-    font-size: 4em;
+    font-size: 3.5em;
     text-align: center;
 }
 
 h3 {
     font-family: 'Ubuntu', sans-serif;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 h4 {
@@ -63,7 +63,7 @@ h6 {
 
 .iterable-button {
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
     margin: 4% 10%;
     border-radius: 0.1em;
     background-color: rgb(251, 255, 233);
@@ -107,24 +107,25 @@ h6 {
     color: black;
     background-color: white;
     text-decoration: none;
-    border-radius: 4em;
     margin: 2em;
-    width: 20em;
-    height: 10em;
+    width: 16em;
+    height: 8em;
     float: left;
     transition: 0.5s;
     border-radius: 4em 0.5em;
+    border: black inset 5px;
+    box-shadow: 0px 0px 5px #ffffff;
 }
 
 .prod-card h3
 {
-    font-size: 3em;
+    font-size: 2.5em;
     margin: 0.5em;
 }
 
 .prod-card h4
 {
-    font-size: 2em;
+    font-size: 1.3em;
     margin: 1em;
 }
 
