--- a/label/static/css/navbar.css
+++ b/label/static/css/navbar.css
@@ -13,9 +13,10 @@
         float: left;
         color: #f2f2f2;
         text-align: center;
-        padding: 14px 16px;
+        padding: 14px 2em;
+        margin-left: 0.5em;
         text-decoration: none;
-        font-size: 1em;
+        font-size: 2em;
         font-family: 'Rajdhani', sans-serif;
         transition-duration: 0.5s;
         border: 5px solid black;
